# pywebview-htmx

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
docs/: architecture.md  development.md  index.md  releasing.md
skills/use-pywebview-htmx/: SKILL.md
skills/use-pywebview-htmx/agents/: openai.yaml
skills/use-pywebview-htmx/examples/: interaction-debug-output.md
skills/use-pywebview-htmx/references/: contract.md  patterns.md  troubleshooting.md
src/pyhtmx/: __init__.py  pyhtmx.py
src/pyhtmx/static/: pyhtmx.js
src/pywebview_htmx/: __init__.py  runtime.py
src/pywebview_htmx/static/: runtime.js
src/pywebview_htmx/static/themes/: aurora.css  base.css  cybermind.css  paper.css
tests/: conftest.py  js_runtime_behavior_harness.mjs  test_behavior_catalog_coverage.py  test_js_contract_config_and_binding.py  test_js_contract_ergonomics.py  test_js_contract_request_and_swap.py  test_js_runtime.py  test_js_runtime_behavior.py  test_python_create_window.py  test_python_injection.py  test_python_params_attr.py  test_python_script_loading.py  test_python_themes.py  test_repo_legibility.py
