[project]
name = "pywebview-htmx"
dynamic = ["version"]
description = "HTMX-style declarative UI bindings for PyWebview apps"
authors = [
    {name = "B.T. Franklin", email = "brandon.franklin@gmail.com"},
]
dependencies = [
    "pywebview>=6.2.1",
]
requires-python = ">=3.14"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[build-system]
requires = ["pdm-backend>=2.4.9"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.19",
    "playwright>=1.61.0",
    "pytest-playwright>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"
includes = ["src/pywebview_htmx"]

[tool.pdm.scripts]
test = "pytest"
lint = "ruff check ."
install-browser = "playwright install chromium"
